# SoLock

./: .gitignore  Makefile  README.md  flake.nix
app/: README.md  go.mod  go.sum
app/cmd/solock/: main.go
app/internal/api/tui/: app.go  passgen.go  styles.go  totp.go  views.go  (+1 more)
app/internal/application/: app.go  app_test.go
app/internal/domain/: derived_keys.go  entry.go  entry_account.go  entry_schema.go  entry_test.go  entry_type.go  field_def.go  group.go  group_account.go  group_test.go  passgen_config.go  repositories.go  services.go  sync_state.go  vault.go  vault_test.go
app/internal/mock/: generate.go  repositories_mock.go  services_mock.go
app/internal/usecase/: add_entry.go  add_entry_test.go  add_group.go  close_program.go  config.go  delete_entry.go  delete_group.go  deploy_program.go  generate_password.go  generate_totp.go  get_dashboard.go  get_entry.go  group_test.go  list_entries.go  list_entries_test.go  list_groups.go  purge_group.go  sync.go  transfer_all.go  unlock.go  update_entry.go  update_group.go  vault_management.go
desktop/: meson.build
desktop/data/: solock-desktop.desktop  style.css  theme.example.ini
desktop/src/: application.c  client.c  clipboard.c  config.c  dashboard.c  entry_editor.c  fields.c  groups_view.c  main.c  main_window.c  popup.c  search.c  secure.c  settings.c  solock-desktop.h  theme.c  tray.c  unlock.c  vault_view.c  wtype.c
docker/: Dockerfile  build.sh  flake.nix
docs/: architecture.md  building.md  key-derivation.md  usage.md
program/: Anchor.toml  Cargo.toml  README.md
program/programs/solock/: Cargo.toml
program/programs/solock/src/: lib.rs
(+25 files in other folders)
