[package]
name = "solock"
version = "0.1.0"
description = "SoLock - Decentralized password vault on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
